:sparkles: feat: 优化

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "docs:version": "vmark",
     "docs:vbuild": "vmark && vitepress build",
     "logo:build": "esno scripts/build-logo.cjs",
-    "release": "release-it",
+    "release": "npx release-it",
     "inspect": "npx node-modules-inspector",
     "changelog": "conventional-changelog -p gitmoji-config -i CHANGELOG.md -s && git add CHANGELOG.md",
     "register:components": "vitepress-rc",
@@ -62,7 +62,7 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/cz-commitlint": "^19.8.1",
-    "@iconify-json/devicon": "^1.2.28",
+    "@iconify-json/devicon": "^1.2.29",
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.23",
     "@iconify/icons-emojione": "^1.2.6",
@@ -127,7 +127,7 @@
     "vite-aliases": "^0.11.8",
     "vite-plugin-alias-import-checker": "^0.1.0",
     "vite-plugin-chunk-split": "^0.5.0",
-    "vite-plugin-compression2": "^2.0.1",
+    "vite-plugin-compression2": "^2.2.0",
     "vite-plugin-conditional-compiler": "^0.3.1",
     "vite-plugin-env-parse": "^1.0.15",
     "vite-plugin-fake-server": "^2.2.0",
@@ -138,7 +138,7 @@
     "vite-plugin-image-preload": "^1.0.0",
     "vite-plugin-mkcert": "^1.17.8",
     "vite-plugin-mock": "^3.0.2",
-    "vite-plugin-mock-dev-server": "^1.8.7",
+    "vite-plugin-mock-dev-server": "^1.9.0",
     "vite-plugin-progress": "^0.0.7",
     "vite-plugin-qrcode": "^0.2.4",
     "vite-plugin-remove-console": "^2.2.0",
@@ -232,7 +232,7 @@
     "markdown-to-txt": "^2.0.1",
     "markmap-common": "^0.18.9",
     "markmap-lib": "^0.18.12",
-    "markmap-toolbar": "^0.18.10",
+    "markmap-toolbar": "^0.18.12",
     "markmap-view": "^0.18.12",
     "medium-zoom": "^1.1.0",
     "nanoid": "^5.1.5",
