--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.23",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.351",
+    "@iconify/json": "^2.2.352",
     "@iconify/utils": "^2.3.0",
     "@julr/vite-plugin-validate-env": "^2.1.0",
     "@plugin-web-update-notification/vite": "^2.0.0",
@@ -76,11 +76,11 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^24.0.3",
+    "@types/node": "^24.0.4",
     "@types/opentype.js": "^1.3.8",
     "@types/three": "^0.177.0",
-    "@vitejs/plugin-legacy": "^6.1.1",
-    "@vitejs/plugin-vue-jsx": "^4.2.0",
+    "@vitejs/plugin-legacy": "^7.0.0",
+    "@vitejs/plugin-vue-jsx": "^5.0.0",
     "autoprefixer": "^10.4.21",
     "canvas-confetti": "^1.9.3",
     "commitizen": "^4.3.1",
@@ -94,6 +94,7 @@
     "cssnano-preset-advanced": "^7.0.7",
     "cz-customizable": "^7.4.0",
     "cz-message-helper": "^2.0.0",
+    "esbuild": "^0.25.5",
     "feed": "^5.1.0",
     "glob": "^11.0.3",
     "husky": "^9.1.7",
@@ -110,7 +111,8 @@
     "patch-package": "^8.0.0",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
-    "sass": "^1.89.2",
+    "rolldown-vite": "^7.0.1",
+    "sass-embedded": "^1.89.2",
     "sharp": "^0.34.2",
     "sitemap": "^8.0.0",
     "sonda": "^0.8.2",
@@ -118,7 +120,7 @@
     "svgo": "^4.0.0",
     "text-to-svg": "^3.1.5",
     "typescript": "^5.8.3",
-    "unocss": "^66.2.3",
+    "unocss": "^66.3.1",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.1.0",
@@ -133,18 +135,17 @@
     "vite-plugin-fake-server": "^2.2.0",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^2.0.2",
-    "vite-plugin-image-optimizer": "^1.1.9",
+    "vite-plugin-image-optimizer": "^2.0.0",
     "vite-plugin-image-placeholder": "^1.1.0",
     "vite-plugin-image-preload": "^1.0.0",
     "vite-plugin-mkcert": "^1.17.8",
     "vite-plugin-mock": "^3.0.2",
-    "vite-plugin-mock-dev-server": "^1.9.0",
+    "vite-plugin-mock-dev-server": "^1.9.1",
     "vite-plugin-progress": "^0.0.7",
     "vite-plugin-qrcode": "^0.2.4",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-robots": "^1.0.5",
     "vite-plugin-shortcuts": "^0.1.0",
-    "vite-plugin-tips": "^2.1.2",
     "vite-plugin-version-mark": "^0.1.4",
     "vitepress-demo-plugin": "^1.4.5",
     "vitepress-i18n": "^1.3.4",
@@ -171,7 +172,7 @@
     "@vitepress-code-preview/plugin": "^1.0.6",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
-    "@vue-styled-components/core": "^1.12.0",
+    "@vue-styled-components/core": "^1.13.1",
     "@vue-styled-components/plugin": "^1.0.1",
     "@vue/test-utils": "^2.4.6",
     "@vuecs/timeago": "^1.1.1",
@@ -254,10 +255,10 @@
     "svg2roughjs": "^3.2.1",
     "three": "^0.177.0",
     "typed.js": "^2.1.0",
-    "ua-parser-js": "^2.0.3",
+    "ua-parser-js": "^2.0.4",
     "vite-plugin-find-image-duplicates": "^0.0.10",
     "vite-plugin-inspect": "^11.2.0",
-    "vitepress": "^2.0.0-alpha.5",
+    "vitepress": "^2.0.0-alpha.7",
     "vitepress-markdown-timeline": "^1.2.2",
     "vitepress-mermaid-renderer": "^1.0.14",
     "vitepress-plugin-back-to-top": "^1.0.1",
@@ -277,7 +278,7 @@
   "overrides": {
     "mermaid": "^11.7.0",
     "release-it": "^18.0.0",
-    "vite": "^6.0.0",
+    "vite": "npm:rolldown-vite@latest",
     "vite-plugin-html": "^3.2.2",
     "vue": "^3.5.13"
   },
