--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.23",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.353",
+    "@iconify/json": "^2.2.354",
     "@iconify/utils": "^2.3.0",
     "@julr/vite-plugin-validate-env": "^2.1.0",
     "@plugin-web-update-notification/vite": "^2.0.0",
@@ -76,7 +76,7 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^24.0.7",
+    "@types/node": "^24.0.8",
     "@types/opentype.js": "^1.3.8",
     "@vitejs/plugin-legacy": "^7.0.0",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
@@ -133,7 +133,7 @@
     "vite-plugin-fake-server": "^2.2.0",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^2.0.2",
-    "vite-plugin-image-optimizer": "^2.0.1",
+    "vite-plugin-image-optimizer": "^2.0.2",
     "vite-plugin-image-placeholder": "^1.1.0",
     "vite-plugin-image-preload": "^1.0.0",
     "vite-plugin-mkcert": "^1.17.8",
@@ -149,8 +149,10 @@
     "vitepress-i18n": "^1.3.4",
     "vitepress-markdown-it-stepper": "^0.1.1",
     "vitepress-plugin-changelog": "^0.1.1",
+    "vitepress-plugin-diagrams": "^1.0.0",
     "vitepress-plugin-llms": "^1.6.0",
     "vitepress-plugin-markdown-define": "^1.0.2",
+    "vitepress-plugin-setfrontmatter": "^1.2.1",
     "vitest": "^3.2.4"
   },
   "dependencies": {
@@ -256,10 +258,17 @@
     "vite-plugin-inspect": "^11.3.0",
     "vitepress": "^2.0.0-alpha.7",
     "vitepress-markdown-timeline": "^1.2.2",
+    "vitepress-plugin-51la": "^0.1.0",
     "vitepress-plugin-back-to-top": "^1.0.1",
+    "vitepress-plugin-breadcrumb": "^1.0.12",
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
+    "vitepress-plugin-doc-analysis": "^1.0.12",
+    "vitepress-plugin-example": "^1.2.0",
+    "vitepress-plugin-frontmatter": "^2.0.1",
+    "vitepress-plugin-glossary": "^1.0.6",
     "vitepress-plugin-group-icons": "^1.6.1",
     "vitepress-plugin-image-viewer": "^1.1.6",
+    "vitepress-plugin-md-h1": "^1.0.11",
     "vitepress-plugin-panzoom-mermaid": "^2.0.23",
     "vitepress-protect-plugin": "^1.0.6",
     "vue-draggable-next": "^2.2.1",
