--- a/package.json
+++ b/package.json
@@ -76,11 +76,10 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^24.0.8",
+    "@types/node": "^24.0.10",
     "@types/opentype.js": "^1.3.8",
     "@vitejs/plugin-legacy": "^7.0.0",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
-    "autoprefixer": "^10.4.21",
     "canvas-confetti": "^1.9.3",
     "commitizen": "^4.3.1",
     "commitlint": "^19.8.1",
@@ -89,8 +88,6 @@
     "commitlint-config-gitmoji": "^2.3.1",
     "conventional-changelog-cli": "^5.0.0",
     "conventional-changelog-gitmoji-config": "^1.5.2",
-    "cssnano": "^7.0.7",
-    "cssnano-preset-advanced": "^7.0.7",
     "cz-customizable": "^7.4.0",
     "cz-message-helper": "^2.0.0",
     "esbuild": "^0.25.5",
@@ -103,17 +100,14 @@
     "md5": "^2.3.0",
     "mermaid": "^11.7.0",
     "mkcert": "^3.2.0",
-    "mockjs": "^1.1.0",
     "node-modules-inspector": "^1.0.0",
     "opentype.js": "^1.3.4",
-    "patch-package": "^8.0.0",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
     "rolldown-vite": "^7.0.3",
     "sass-embedded": "^1.89.2",
     "sharp": "^0.34.2",
     "sitemap": "^8.0.0",
-    "sonda": "^0.8.2",
     "standard-version": "^9.5.0",
     "svgo": "^4.0.0",
     "text-to-svg": "^3.1.5",
@@ -137,7 +131,6 @@
     "vite-plugin-image-placeholder": "^1.1.0",
     "vite-plugin-image-preload": "^1.0.0",
     "vite-plugin-mkcert": "^1.17.8",
-    "vite-plugin-mock": "^3.0.2",
     "vite-plugin-mock-dev-server": "^1.9.1",
     "vite-plugin-progress": "^0.0.7",
     "vite-plugin-qrcode": "^0.3.0",
@@ -157,7 +150,8 @@
   },
   "dependencies": {
     "@dash14/svg-pan-zoom": "^3.6.9",
-    "@faker-js/faker": "^9.8.0",
+    "@dhlx/vitepress-plugin-mindmap": "^0.0.2",
+    "@faker-js/faker": "^9.9.0",
     "@fingerprintjs/fingerprintjs": "^4.6.2",
     "@heroicons/vue": "^2.2.0",
     "@iconify/iconify": "^3.1.1",
@@ -173,18 +167,14 @@
     "@vue-styled-components/core": "^1.13.1",
     "@vue-styled-components/plugin": "^1.0.1",
     "@vue/test-utils": "^2.4.6",
-    "@vuecs/timeago": "^1.1.1",
     "animate.css": "^4.1.1",
     "animejs": "3.2.2",
     "ant-design-vue": "4.2.6",
     "bluebird": "^3.7.2",
-    "cannon-es": "^0.20.0",
     "colorthief": "^2.6.0",
-    "console-ban": "^5.0.0",
-    "cp-text": "^1.0.2",
+    "colorthief-async": "^2.3.0",
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
-    "dat.gui": "^0.7.9",
     "dayjs": "^1.11.13",
     "deepmerge-ts": "^7.1.5",
     "default-passive-events": "^4.0.0",
@@ -253,6 +243,7 @@
     "svg-zoom-drag-vue-directives": "^1.0.12",
     "svg2roughjs": "^3.2.1",
     "typed.js": "^2.1.0",
+    "typeit": "^8.8.7",
     "ua-parser-js": "^2.0.4",
     "vite-plugin-find-image-duplicates": "^0.0.10",
     "vite-plugin-inspect": "^11.3.0",
