--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@iconify/icons-emojione": "^1.2.6",
     "@iconify/json": "^2.2.354",
     "@iconify/utils": "^2.3.0",
-    "@julr/vite-plugin-validate-env": "^2.1.0",
+    "@julr/vite-plugin-validate-env": "^2.2.0",
     "@plugin-web-update-notification/vite": "^2.0.0",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/bluebird": "^3.5.42",
@@ -98,7 +98,7 @@
     "markdown-it": "^14.1.0",
     "markdown-it-mathjax3": "^4.3.2",
     "md5": "^2.3.0",
-    "mermaid": "^11.7.0",
+    "mermaid": "^11.8.0",
     "mkcert": "^3.2.0",
     "node-modules-inspector": "^1.0.0",
     "opentype.js": "^1.3.4",
@@ -228,7 +228,8 @@
     "nprogress-v2": "^1.1.10",
     "ofetch": "^1.4.1",
     "oimo-esm": "^1.0.10",
-    "oxc-minify": "^0.75.0",
+    "oxc-minify": "^0.75.1",
+    "pagefind": "^1.3.0",
     "pinia": "^3.0.3",
     "pinyin-pro": "^3.26.0",
     "random": "^5.4.0",
@@ -250,6 +251,7 @@
     "vitepress": "^2.0.0-alpha.7",
     "vitepress-markdown-timeline": "^1.2.2",
     "vitepress-plugin-51la": "^0.1.0",
+    "vitepress-plugin-auto-frontmatter": "^1.0.10",
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-breadcrumb": "^1.0.12",
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
@@ -260,6 +262,7 @@
     "vitepress-plugin-group-icons": "^1.6.1",
     "vitepress-plugin-image-viewer": "^1.1.6",
     "vitepress-plugin-md-h1": "^1.0.11",
+    "vitepress-plugin-pagefind": "^0.4.14",
     "vitepress-plugin-panzoom-mermaid": "^2.0.23",
     "vitepress-protect-plugin": "^1.0.6",
     "vue-draggable-next": "^2.2.1",
