:sparkles: feat: 优化

--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.23",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.354",
+    "@iconify/json": "^2.2.356",
     "@iconify/utils": "^2.3.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@plugin-web-update-notification/vite": "^2.0.0",
@@ -90,7 +90,7 @@
     "conventional-changelog-gitmoji-config": "^1.5.2",
     "cz-customizable": "^7.4.0",
     "cz-message-helper": "^2.0.0",
-    "esbuild": "^0.25.5",
+    "esbuild": "^0.25.6",
     "feed": "^5.1.0",
     "glob": "^11.0.3",
     "husky": "^9.1.7",
@@ -98,13 +98,12 @@
     "markdown-it": "^14.1.0",
     "markdown-it-mathjax3": "^4.3.2",
     "md5": "^2.3.0",
-    "mermaid": "^11.8.0",
     "mkcert": "^3.2.0",
     "node-modules-inspector": "^1.0.0",
     "opentype.js": "^1.3.4",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
-    "rolldown-vite": "^7.0.4",
+    "rolldown-vite": "^7.0.5",
     "sass-embedded": "^1.89.2",
     "sharp": "^0.34.2",
     "sitemap": "^8.0.0",
@@ -112,7 +111,7 @@
     "svgo": "^4.0.0",
     "text-to-svg": "^3.1.5",
     "typescript": "^5.8.3",
-    "unocss": "^66.3.2",
+    "unocss": "^66.3.3",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.1.0",
@@ -143,13 +142,12 @@
     "vitepress-markdown-it-stepper": "^0.1.1",
     "vitepress-plugin-changelog": "^0.1.1",
     "vitepress-plugin-diagrams": "^1.0.0",
-    "vitepress-plugin-llms": "^1.6.0",
+    "vitepress-plugin-llms": "^1.7.0",
     "vitepress-plugin-markdown-define": "^1.0.2",
     "vitepress-plugin-setfrontmatter": "^1.2.1",
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@dash14/svg-pan-zoom": "^3.6.9",
     "@dhlx/vitepress-plugin-mindmap": "^0.0.2",
     "@faker-js/faker": "^9.9.0",
     "@fingerprintjs/fingerprintjs": "^4.6.2",
@@ -179,7 +177,7 @@
     "deepmerge-ts": "^7.1.5",
     "default-passive-events": "^4.0.0",
     "driver.js": "^1.3.6",
-    "echarts": "5.5.1",
+    "echarts": "^6.0.0-beta.1",
     "echarts-gl": "^2.0.9",
     "element-resize-detector": "^1.2.4",
     "esno": "^4.8.0",
@@ -215,7 +213,6 @@
     "markdown-it-strikethrough-alt": "^1.0.0",
     "markdown-it-sub": "^2.0.0",
     "markdown-it-sup": "^2.0.0",
-    "markdown-it-task-checkbox": "^1.0.6",
     "markdown-it-variable": "^1.0.2",
     "markdown-it-wordless": "^1.1.1",
     "markdown-to-txt": "^2.0.1",
@@ -224,6 +221,7 @@
     "markmap-toolbar": "^0.18.12",
     "markmap-view": "^0.18.12",
     "medium-zoom": "^1.1.0",
+    "mermaid": "^11.8.1",
     "nanoid": "^5.1.5",
     "nprogress-v2": "^1.1.10",
     "ofetch": "^1.4.1",
@@ -236,13 +234,9 @@
     "randomcolor": "^0.6.2",
     "resize-observer-polyfill": "^1.5.1",
     "resize-observer-vue": "^1.2.0",
-    "rough-notation": "^0.5.1",
     "screenfull": "^6.0.2",
     "segment": "^0.1.3",
     "simple-git": "^3.28.0",
-    "svg-pan-zoom-container": "^0.6.1",
-    "svg-zoom-drag-vue-directives": "^1.0.12",
-    "svg2roughjs": "^3.2.1",
     "typed.js": "^2.1.0",
     "typeit": "^8.8.7",
     "ua-parser-js": "^2.0.4",
@@ -250,6 +244,7 @@
     "vite-plugin-inspect": "^11.3.0",
     "vitepress": "^2.0.0-alpha.7",
     "vitepress-markdown-timeline": "^1.2.2",
+    "vitepress-mermaid-renderer": "^1.0.14",
     "vitepress-plugin-51la": "^0.1.0",
     "vitepress-plugin-auto-frontmatter": "^1.0.10",
     "vitepress-plugin-back-to-top": "^1.0.1",
@@ -263,7 +258,6 @@
     "vitepress-plugin-image-viewer": "^1.1.6",
     "vitepress-plugin-md-h1": "^1.0.11",
     "vitepress-plugin-pagefind": "^0.4.14",
-    "vitepress-plugin-panzoom-mermaid": "^2.0.23",
     "vitepress-protect-plugin": "^1.0.6",
     "vue-draggable-next": "^2.2.1",
     "vue3-autocounter": "^1.0.8",
@@ -274,7 +268,7 @@
   },
   "overrides": {
     "release-it": "^18.0.0",
-    "vite": "npm:rolldown-vite@latest",
+    "vite": "npm:rolldown-vite@7.0.5",
     "vite-plugin-html": "^3.2.2",
     "vue": "^3.5.13"
   },
