--- a/package.json
+++ b/package.json
@@ -71,12 +71,11 @@
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@plugin-web-update-notification/vite": "^2.0.0",
     "@release-it/conventional-changelog": "^10.0.1",
-    "@types/bluebird": "^3.5.42",
     "@types/fs-extra": "^11.0.4",
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^24.0.10",
+    "@types/node": "^24.0.12",
     "@types/opentype.js": "^1.3.8",
     "@vitejs/plugin-legacy": "^7.0.0",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
@@ -90,7 +89,6 @@
     "conventional-changelog-gitmoji-config": "^1.5.2",
     "cz-customizable": "^7.4.0",
     "cz-message-helper": "^2.0.0",
-    "esbuild": "^0.25.6",
     "feed": "^5.1.0",
     "glob": "^11.0.3",
     "husky": "^9.1.7",
@@ -98,12 +96,13 @@
     "markdown-it": "^14.1.0",
     "markdown-it-mathjax3": "^4.3.2",
     "md5": "^2.3.0",
+    "mermaid": "^11.8.1",
     "mkcert": "^3.2.0",
     "node-modules-inspector": "^1.0.0",
     "opentype.js": "^1.3.4",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
-    "rolldown-vite": "^7.0.5",
+    "rolldown-vite": "^7.0.6",
     "sass-embedded": "^1.89.2",
     "sharp": "^0.34.2",
     "sitemap": "^8.0.0",
@@ -148,16 +147,14 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@dhlx/vitepress-plugin-mindmap": "^0.0.2",
     "@faker-js/faker": "^9.9.0",
     "@fingerprintjs/fingerprintjs": "^4.6.2",
     "@heroicons/vue": "^2.2.0",
     "@iconify/iconify": "^3.1.1",
     "@iconify/vue": "^5.0.0",
-    "@mermaid-js/mermaid-mindmap": "^9.3.0",
+    "@mermaid-js/layout-elk": "^0.1.8",
     "@mermaid-js/mermaid-zenuml": "^0.2.1",
     "@microsoft/fetch-event-source": "^2.0.1",
-    "@tweenjs/tween.js": "^25.0.0",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
     "@vitest/coverage-v8": "^3.2.4",
@@ -168,7 +165,6 @@
     "animate.css": "^4.1.1",
     "animejs": "3.2.2",
     "ant-design-vue": "4.2.6",
-    "bluebird": "^3.7.2",
     "colorthief": "^2.6.0",
     "colorthief-async": "^2.3.0",
     "cross-env": "^7.0.3",
@@ -190,10 +186,7 @@
     "hashids": "^2.3.0",
     "html2particle": "^0.0.10",
     "jsencrypt": "^3.3.2",
-    "kinet": "^2.2.1",
-    "lhh-utils": "^1.0.6",
     "line-reader": "^0.4.0",
-    "locate-path": "^7.2.0",
     "lodash-es": "^4.17.21",
     "lunisolar": "^2.5.2",
     "markdown-it-anchor": "^9.2.0",
@@ -213,7 +206,6 @@
     "markdown-it-strikethrough-alt": "^1.0.0",
     "markdown-it-sub": "^2.0.0",
     "markdown-it-sup": "^2.0.0",
-    "markdown-it-variable": "^1.0.2",
     "markdown-it-wordless": "^1.1.1",
     "markdown-to-txt": "^2.0.1",
     "markmap-common": "^0.18.9",
@@ -221,12 +213,10 @@
     "markmap-toolbar": "^0.18.12",
     "markmap-view": "^0.18.12",
     "medium-zoom": "^1.1.0",
-    "mermaid": "^11.8.1",
     "nanoid": "^5.1.5",
     "nprogress-v2": "^1.1.10",
     "ofetch": "^1.4.1",
-    "oimo-esm": "^1.0.10",
-    "oxc-minify": "^0.75.1",
+    "oxc-minify": "^0.76.0",
     "pagefind": "^1.3.0",
     "pinia": "^3.0.3",
     "pinyin-pro": "^3.26.0",
@@ -235,20 +225,16 @@
     "resize-observer-polyfill": "^1.5.1",
     "resize-observer-vue": "^1.2.0",
     "screenfull": "^6.0.2",
-    "segment": "^0.1.3",
     "simple-git": "^3.28.0",
-    "typed.js": "^2.1.0",
-    "typeit": "^8.8.7",
     "ua-parser-js": "^2.0.4",
     "vite-plugin-find-image-duplicates": "^0.0.10",
     "vite-plugin-inspect": "^11.3.0",
-    "vitepress": "^2.0.0-alpha.7",
+    "vitepress": "^2.0.0-alpha.8",
     "vitepress-markdown-timeline": "^1.2.2",
     "vitepress-mermaid-renderer": "^1.0.14",
     "vitepress-plugin-51la": "^0.1.0",
     "vitepress-plugin-auto-frontmatter": "^1.0.10",
     "vitepress-plugin-back-to-top": "^1.0.1",
-    "vitepress-plugin-breadcrumb": "^1.0.12",
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
     "vitepress-plugin-doc-analysis": "^1.0.12",
     "vitepress-plugin-example": "^1.2.0",
@@ -259,7 +245,6 @@
     "vitepress-plugin-md-h1": "^1.0.11",
     "vitepress-plugin-pagefind": "^0.4.14",
     "vitepress-protect-plugin": "^1.0.6",
-    "vue-draggable-next": "^2.2.1",
     "vue3-autocounter": "^1.0.8",
     "vue3-simple-icons": "^15.0.0",
     "xlogs": "^0.1.0",
@@ -268,7 +253,7 @@
   },
   "overrides": {
     "release-it": "^18.0.0",
-    "vite": "npm:rolldown-vite@7.0.5",
+    "vite": "npm:rolldown-vite@7.0.6",
     "vite-plugin-html": "^3.2.2",
     "vue": "^3.5.13"
   },
