:sparkles: feat: 修复和优化

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,10 +28,10 @@
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.patterns": {
     "index.html": "index.html,index.*.html,*.css",
-    "package.json": ".nvmrc,.npmrc,tsconfig.*.json,*.cjs,*.js,*.json,*.config.ts,*.config.cjs,*.config.mjs,.preettierrc,.eslintrc.cjs,.eslintrc,.gitignore,.editorconfig,.node-version,.browserslistrc,.hintrc,licenses.csv",
+    "package.json": ".nvmrc,.npmrc,tsconfig.*.json,*.cjs,*.js,*.json,*.config.ts,*.config.cjs,*.config.mjs,.preettierrc,.eslintrc.cjs,.eslintrc,.gitignore,.editorconfig,.node-version,.browserslistrc,.hintrc,licenses.csv,*.depcheckrc",
     ".env": "env.*,.env.*,.robots.*.txt",
     "components.d.ts": "auto-imports.d.ts,components.d.ts",
-    "index.md": "index.md,archives.md,tags.md,me.*.md,manuals.md,resume.md,about.md,en-US.md,zh-CN.md,sponsor.md,CONTRIBUTING.md,CODE_OF_CONDUCT.md,CONTRIBUTING.zh-CN.md,README.md,CHANGELOG.md,PRIVACY_POLICY.md,TERMS_OF_SERVICE.md",
+    "index.md": "index.md,login.md,archives.md,tags.md,me.*.md,manuals.md,resume.md,about.md,en-US.md,zh-CN.md,sponsor.md,CONTRIBUTING.md,CODE_OF_CONDUCT.md,CONTRIBUTING.zh-CN.md,README.md,CHANGELOG.md,PRIVACY_POLICY.md,TERMS_OF_SERVICE.md,logo.svg",
     "Dockerfile": "Dockerfile, .dockerignore"
   },
   "workbench.navigationControl.enabled": false,
@@ -71,6 +71,7 @@
   "typescript.tsserver.maxTsServerMemory": 4096,
   "typescript.tsserver.nodePath": "node",
   "vitest.shellType": "terminal",
+  "commentTranslate.targetLanguage": "zh-CN",
   //   // 拖拽行为
   //   "markdown.editor.drop.copyIntoWorkspace": "never",
   //   // 粘贴行为
