--- a/package.json
+++ b/package.json
@@ -70,10 +70,9 @@
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/fs-extra": "^11.0.4",
-    "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^24.0.12",
+    "@types/node": "^24.0.13",
     "@vitejs/plugin-legacy": "^7.0.0",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
     "canvas-confetti": "^1.9.3",
@@ -98,13 +97,12 @@
     "node-modules-inspector": "^1.0.0",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
-    "rolldown-vite": "^7.0.6",
+    "rolldown-vite": "^7.0.8",
     "sass-embedded": "^1.89.2",
-    "sharp": "^0.34.2",
+    "sharp": "^0.34.3",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
     "svgo": "^4.0.0",
-    "text-to-svg": "^3.1.5",
     "typescript": "^5.8.3",
     "unocss": "^66.3.3",
     "unplugin-auto-import": "^19.3.0",
@@ -144,12 +142,9 @@
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
     "@fingerprintjs/fingerprintjs": "^4.6.2",
-    "@heroicons/vue": "^2.2.0",
-    "@iconify/iconify": "^3.1.1",
     "@iconify/vue": "^5.0.0",
     "@mermaid-js/layout-elk": "^0.1.8",
     "@mermaid-js/mermaid-zenuml": "^0.2.1",
-    "@microsoft/fetch-event-source": "^2.0.1",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
     "@vitest/coverage-v8": "^3.2.4",
@@ -161,7 +156,6 @@
     "animejs": "3.2.2",
     "ant-design-vue": "4.2.6",
     "colorthief": "^2.6.0",
-    "colorthief-async": "^2.3.0",
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.13",
@@ -171,7 +165,6 @@
     "echarts": "^6.0.0-beta.1",
     "element-resize-detector": "^1.2.4",
     "esno": "^4.8.0",
-    "figures": "^6.1.0",
     "front-matter": "^4.0.2",
     "fs": "^0.0.1-security",
     "fs-extra": "^11.3.0",
@@ -179,23 +172,14 @@
     "gsap": "^3.13.0",
     "hashids": "^2.3.0",
     "html2particle": "^0.0.10",
-    "jsencrypt": "^3.3.2",
-    "line-reader": "^0.4.0",
     "lodash-es": "^4.17.21",
     "lunisolar": "^2.5.2",
     "markdown-it-anchor": "^9.2.0",
-    "markdown-it-async": "^2.2.0",
-    "markdown-it-cjk-breaks": "^2.0.0",
     "markdown-it-collapsible": "^2.0.2",
-    "markdown-it-custom-attrs": "^1.0.2",
-    "markdown-it-external-links": "^0.0.6",
-    "markdown-it-fitmedia": "^1.0.2",
     "markdown-it-footnote": "^4.0.0",
     "markdown-it-front-matter": "^0.2.4",
     "markdown-it-hashmention": "^0.3.9",
-    "markdown-it-heimu": "^1.0.0",
     "markdown-it-image-lazy-loading": "^2.0.1",
-    "markdown-it-ins": "^4.0.0",
     "markdown-it-named-code-blocks": "^1.0.6",
     "markdown-it-strikethrough-alt": "^1.0.0",
     "markdown-it-sub": "^2.0.0",
@@ -217,7 +201,6 @@
     "random": "^5.4.0",
     "randomcolor": "^0.6.2",
     "resize-observer-polyfill": "^1.5.1",
-    "resize-observer-vue": "^1.2.0",
     "screenfull": "^6.0.2",
     "simple-git": "^3.28.0",
     "ua-parser-js": "^2.0.4",
@@ -226,16 +209,11 @@
     "vitepress": "^2.0.0-alpha.8",
     "vitepress-markdown-timeline": "^1.2.2",
     "vitepress-mermaid-renderer": "^1.0.14",
-    "vitepress-plugin-51la": "^0.1.0",
     "vitepress-plugin-auto-frontmatter": "^1.0.10",
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
-    "vitepress-plugin-doc-analysis": "^1.0.12",
-    "vitepress-plugin-example": "^1.2.0",
     "vitepress-plugin-frontmatter": "^2.0.1",
-    "vitepress-plugin-glossary": "^1.0.6",
     "vitepress-plugin-group-icons": "^1.6.1",
-    "vitepress-plugin-image-viewer": "^1.1.6",
     "vitepress-plugin-md-h1": "^1.0.11",
     "vitepress-plugin-pagefind": "^0.4.14",
     "vitepress-protect-plugin": "^1.0.6",
@@ -247,8 +225,9 @@
   },
   "overrides": {
     "release-it": "^18.0.0",
-    "vite": "npm:rolldown-vite@7.0.6",
+    "vite": "npm:rolldown-vite@7.0.8",
     "vite-plugin-html": "^3.2.2",
+    "vitepress": "^2.0.0-alpha.8",
     "vue": "^3.5.13"
   },
   "version": "0.6.3"
