--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "mkcert:install": "mkcert -install",
     "mkcert:uninstall": "mkcert -uninstall",
     "export-pdf": "press-export-pdf export ./zh-CN/gallery",
-    "ncu": "npx npm-check-updates"
+    "ncu": "npx npm-check-updates",
+    "taze": "npx taze"
   },
   "imports": {
     "#*": "./*"
@@ -61,18 +62,18 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/cz-commitlint": "^19.8.1",
-    "@iconify-json/devicon": "^1.2.29",
+    "@iconify-json/devicon": "^1.2.31",
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.23",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.357",
+    "@iconify/json": "^2.2.359",
     "@iconify/utils": "^2.3.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^24.0.13",
+    "@types/node": "^24.0.14",
     "@vitejs/plugin-legacy": "^7.0.0",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
     "canvas-confetti": "^1.9.3",
@@ -97,7 +98,7 @@
     "node-modules-inspector": "^1.0.0",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
-    "rolldown-vite": "^7.0.8",
+    "rolldown-vite": "^7.0.9",
     "sass-embedded": "^1.89.2",
     "sharp": "^0.34.3",
     "sitemap": "^8.0.0",
@@ -194,11 +195,11 @@
     "nanoid": "^5.1.5",
     "nprogress-v2": "^1.1.10",
     "ofetch": "^1.4.1",
-    "oxc-minify": "^0.76.0",
+    "oxc-minify": "^0.77.0",
     "pagefind": "^1.3.0",
     "pinia": "^3.0.3",
     "pinyin-pro": "^3.26.0",
-    "random": "^5.4.0",
+    "random": "^5.4.1",
     "randomcolor": "^0.6.2",
     "resize-observer-polyfill": "^1.5.1",
     "screenfull": "^6.0.2",
@@ -224,11 +225,11 @@
     "yuppie-ui": "^0.0.11"
   },
   "overrides": {
-    "release-it": "^18.0.0",
-    "vite": "npm:rolldown-vite@7.0.8",
+    "release-it": "^19.0.3",
+    "vite": "npm:rolldown-vite@7.0.9",
     "vite-plugin-html": "^3.2.2",
     "vitepress": "^2.0.0-alpha.8",
-    "vue": "^3.5.13"
+    "vue": "^3.5.17"
   },
   "version": "0.6.4"
 }
