:sparkles: feat: 优化vitest功能

--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "docs:dev": "vitepress --mode development --host",
     "docs:prepare": "esno scripts/prepare.ts",
     "docs:build": "set NODE_OPTIONS=--max-old-space-size=4096 && vitepress build",
-    "docs:test": "esno ./utils/build-version.ts",
+    "docs:test": "vitest --ui",
     "docker:build": "docker build -t changweihua-github:latest . -f Dockerfile",
     "docs:preview": "vitepress preview --host",
     "docs:pdf": "npm run docs:build && node generate-pdf.js",
     "commit": "git add . && cz-customizable",
-    "docs:version": "vmark",
+    "docs:vmark": "vmark",
+    "docs:version": "esno ./utils/build-version.ts",
     "docs:vbuild": "vmark && vitepress build",
     "release": "npx release-it",
     "inspect": "npx node-modules-inspector",
