--- a/package.json
+++ b/package.json
@@ -63,19 +63,19 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/cz-commitlint": "^19.8.1",
-    "@iconify-json/devicon": "^1.2.31",
+    "@iconify-json/devicon": "^1.2.32",
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.23",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.359",
+    "@iconify/json": "^2.2.360",
     "@iconify/utils": "^2.3.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^24.0.14",
-    "@vitejs/plugin-legacy": "^7.0.1",
+    "@types/node": "^24.1.0",
+    "@vitejs/plugin-legacy": "^7.1.0",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
     "canvas-confetti": "^1.9.3",
     "commitizen": "^4.3.1",
@@ -99,7 +99,7 @@
     "node-modules-inspector": "^1.0.0",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
-    "rolldown-vite": "^7.0.9",
+    "rolldown-vite": "^7.0.10",
     "sass-embedded": "^1.89.2",
     "sharp": "^0.34.3",
     "sitemap": "^8.0.0",
@@ -196,7 +196,7 @@
     "nanoid": "^5.1.5",
     "nprogress-v2": "^1.1.10",
     "ofetch": "^1.4.1",
-    "oxc-minify": "^0.77.2",
+    "oxc-minify": "^0.77.3",
     "pagefind": "^1.3.0",
     "pinia": "^3.0.3",
     "pinyin-pro": "^3.26.0",
@@ -216,21 +216,22 @@
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
     "vitepress-plugin-frontmatter": "^2.0.1",
     "vitepress-plugin-group-icons": "^1.6.1",
+    "vitepress-plugin-legend": "^1.0.0",
     "vitepress-plugin-md-h1": "^1.0.11",
     "vitepress-plugin-pagefind": "^0.4.14",
     "vitepress-protect-plugin": "^1.0.6",
     "vue3-autocounter": "^1.0.8",
-    "vue3-simple-icons": "^15.0.0",
+    "vue3-simple-icons": "^15.6.0",
     "xlogs": "^0.1.0",
     "xmind-embed-viewer": "^1.2.0",
     "yuppie-ui": "^0.0.11"
   },
   "overrides": {
     "release-it": "^19.0.4",
-    "vite": "npm:rolldown-vite@7.0.9",
+    "vite": "npm:rolldown-vite@7.0.10",
     "vite-plugin-html": "^3.2.2",
     "vitepress": "^2.0.0-alpha.8",
-    "vue": "^3.5.17"
+    "vue": "^3.5.18"
   },
   "version": "0.6.6"
 }
