--- a/package.json
+++ b/package.json
@@ -63,11 +63,11 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/cz-commitlint": "^19.8.1",
-    "@iconify-json/devicon": "^1.2.32",
+    "@iconify-json/devicon": "^1.2.33",
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.23",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.360",
+    "@iconify/json": "^2.2.362",
     "@iconify/utils": "^2.3.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.1",
@@ -164,7 +164,7 @@
     "deepmerge-ts": "^7.1.5",
     "default-passive-events": "^4.0.0",
     "driver.js": "^1.3.6",
-    "echarts": "^6.0.0-beta.1",
+    "echarts": "^6.0.0-rc.1",
     "element-resize-detector": "^1.2.4",
     "esno": "^4.8.0",
     "front-matter": "^4.0.2",
@@ -216,7 +216,7 @@
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
     "vitepress-plugin-frontmatter": "^2.0.1",
     "vitepress-plugin-group-icons": "^1.6.1",
-    "vitepress-plugin-legend": "^1.0.0",
+    "vitepress-plugin-legend": "^1.0.1",
     "vitepress-plugin-md-h1": "^1.0.11",
     "vitepress-plugin-pagefind": "^0.4.14",
     "vitepress-protect-plugin": "^1.0.6",
