--- a/package.json
+++ b/package.json
@@ -227,6 +227,7 @@
     "yuppie-ui": "^0.0.11"
   },
   "overrides": {
+    "@zenuml/core": "^3.36.0",
     "release-it": "^19.0.4",
     "vite": "npm:rolldown-vite@7.0.11",
     "vite-plugin-html": "^3.2.2",
