--- a/package.json
+++ b/package.json
@@ -63,11 +63,11 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/cz-commitlint": "^19.8.1",
-    "@iconify-json/devicon": "^1.2.33",
+    "@iconify-json/devicon": "^1.2.35",
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.23",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.362",
+    "@iconify/json": "^2.2.364",
     "@iconify/utils": "^2.3.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.1",
@@ -109,7 +109,7 @@
     "unocss": "^66.3.3",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-iconify-generator": "^0.7.3",
-    "unplugin-icons": "^22.1.0",
+    "unplugin-icons": "^22.2.0",
     "unplugin-version-injector": "^2.1.1",
     "unplugin-vue-components": "^28.8.0",
     "vite-aliases": "^0.11.8",
@@ -136,7 +136,7 @@
     "vitepress-markdown-it-stepper": "^0.1.1",
     "vitepress-plugin-changelog": "^0.1.1",
     "vitepress-plugin-diagrams": "^1.0.0",
-    "vitepress-plugin-llms": "^1.7.1",
+    "vitepress-plugin-llms": "^1.7.2",
     "vitepress-plugin-markdown-define": "^1.0.2",
     "vitepress-plugin-setfrontmatter": "^1.2.1",
     "vitest": "^3.2.4"
@@ -164,7 +164,7 @@
     "deepmerge-ts": "^7.1.5",
     "default-passive-events": "^4.0.0",
     "driver.js": "^1.3.6",
-    "echarts": "^6.0.0-rc.1",
+    "echarts": "^6.0.0",
     "element-resize-detector": "^1.2.4",
     "esno": "^4.8.0",
     "front-matter": "^4.0.2",
@@ -207,7 +207,7 @@
     "simple-git": "^3.28.0",
     "ua-parser-js": "^2.0.4",
     "vite-plugin-find-image-duplicates": "^0.0.10",
-    "vite-plugin-inspect": "^11.3.0",
+    "vite-plugin-inspect": "^11.3.2",
     "vitepress": "^2.0.0-alpha.9",
     "vitepress-markdown-timeline": "^1.2.2",
     "vitepress-mermaid-renderer": "^1.0.14",
@@ -216,7 +216,7 @@
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
     "vitepress-plugin-frontmatter": "^2.0.1",
     "vitepress-plugin-group-icons": "^1.6.1",
-    "vitepress-plugin-legend": "^1.0.3",
+    "vitepress-plugin-legend": "^1.0.7",
     "vitepress-plugin-md-h1": "^1.0.11",
     "vitepress-plugin-pagefind": "^0.4.14",
     "vitepress-protect-plugin": "^1.0.6",
