--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
     "svgo": "^4.0.0",
-    "typescript": "^5.8.3",
+    "typescript": "^5.9.2",
     "unocss": "^66.3.3",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-iconify-generator": "^0.7.3",
@@ -142,6 +142,7 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@catppuccin/vitepress": "^0.1.2",
     "@faker-js/faker": "^9.9.0",
     "@fingerprintjs/fingerprintjs": "^4.6.2",
     "@iconify/vue": "^5.0.0",
@@ -158,7 +159,7 @@
     "animejs": "3.2.2",
     "ant-design-vue": "4.2.6",
     "colorthief": "^2.6.0",
-    "cross-env": "^7.0.3",
+    "cross-env": "^10.0.0",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.13",
     "deepmerge-ts": "^7.1.5",
@@ -177,12 +178,18 @@
     "lodash-es": "^4.17.21",
     "lunisolar": "^2.5.2",
     "markdown-it-anchor": "^9.2.0",
+    "markdown-it-cjk-friendly": "^1.2.0",
     "markdown-it-collapsible": "^2.0.2",
     "markdown-it-footnote": "^4.0.0",
     "markdown-it-front-matter": "^0.2.4",
+    "markdown-it-github-alerts": "^1.0.0",
     "markdown-it-hashmention": "^0.3.9",
     "markdown-it-image-lazy-loading": "^2.0.1",
+    "markdown-it-multimd-table-ext": "^4.2.32",
+    "markdown-it-multiple-choice": "^1.1.5",
     "markdown-it-named-code-blocks": "^1.0.6",
+    "markdown-it-regex": "^0.2.2",
+    "markdown-it-replace-link": "^1.2.2",
     "markdown-it-strikethrough-alt": "^1.0.0",
     "markdown-it-sub": "^2.0.0",
     "markdown-it-sup": "^2.0.0",
@@ -196,7 +203,7 @@
     "nanoid": "^5.1.5",
     "nprogress-v2": "^1.1.10",
     "ofetch": "^1.4.1",
-    "oxc-minify": "^0.77.3",
+    "oxc-minify": "^0.79.1",
     "pagefind": "^1.3.0",
     "pinia": "^3.0.3",
     "pinyin-pro": "^3.26.0",
