--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.23",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.364",
+    "@iconify/json": "^2.2.365",
     "@iconify/utils": "^2.3.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.1",
@@ -106,7 +106,7 @@
     "standard-version": "^9.5.0",
     "svgo": "^4.0.0",
     "typescript": "^5.9.2",
-    "unocss": "^66.3.3",
+    "unocss": "^66.4.0",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.2.0",
@@ -130,19 +130,21 @@
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-robots": "^1.0.5",
     "vite-plugin-shortcuts": "^0.1.0",
-    "vite-plugin-version-mark": "^0.1.4",
-    "vitepress-demo-plugin": "^1.4.5",
+    "vite-plugin-version-mark": "^0.2.1",
+    "vitepress-demo-plugin": "^1.4.7",
     "vitepress-i18n": "^1.3.4",
     "vitepress-markdown-it-stepper": "^0.1.1",
     "vitepress-plugin-changelog": "^0.1.1",
     "vitepress-plugin-diagrams": "^1.0.0",
     "vitepress-plugin-llms": "^1.7.2",
     "vitepress-plugin-markdown-define": "^1.0.2",
+    "vitepress-plugin-mermaid": "^2.0.17",
     "vitepress-plugin-setfrontmatter": "^1.2.1",
     "vitest": "^3.2.4"
   },
   "dependencies": {
     "@catppuccin/vitepress": "^0.1.2",
+    "@dhlx/delay": "^0.0.5",
     "@faker-js/faker": "^9.9.0",
     "@fingerprintjs/fingerprintjs": "^4.6.2",
     "@iconify/vue": "^5.0.0",
@@ -175,7 +177,7 @@
     "hashids": "^2.3.0",
     "html2particle": "^0.0.10",
     "lodash-es": "^4.17.21",
-    "lunisolar": "^2.5.2",
+    "lunisolar": "^2.6.0",
     "markdown-it-anchor": "^9.2.0",
     "markdown-it-cjk-friendly": "^1.2.0",
     "markdown-it-collapsible": "^2.0.2",
@@ -202,10 +204,10 @@
     "nanoid": "^5.1.5",
     "nprogress-v2": "^1.1.10",
     "ofetch": "^1.4.1",
-    "oxc-minify": "^0.79.1",
+    "oxc-minify": "^0.80.0",
     "pagefind": "^1.3.0",
     "pinia": "^3.0.3",
-    "pinyin-pro": "^3.26.0",
+    "pinyin-pro": "^3.27.0",
     "random": "^5.4.1",
     "randomcolor": "^0.6.2",
     "resize-observer-polyfill": "^1.5.1",
@@ -224,6 +226,7 @@
     "vitepress-plugin-group-icons": "^1.6.1",
     "vitepress-plugin-legend": "^1.0.7",
     "vitepress-plugin-md-h1": "^1.0.11",
+    "vitepress-plugin-mermaid-pan-zoom": "^1.0.0",
     "vitepress-plugin-pagefind": "^0.4.14",
     "vitepress-protect-plugin": "^1.0.6",
     "vue3-autocounter": "^1.0.8",
