--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^24.1.0",
+    "@types/node": "^24.2.0",
     "@vitejs/plugin-legacy": "^7.1.0",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
     "canvas-confetti": "^1.9.3",
@@ -99,7 +99,7 @@
     "node-modules-inspector": "^1.0.0",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
-    "rolldown-vite": "^7.0.12",
+    "rolldown-vite": "^7.1.0-beta.0",
     "sass-embedded": "^1.89.2",
     "sharp": "^0.34.3",
     "sitemap": "^8.0.0",
@@ -226,7 +226,7 @@
     "vitepress-plugin-group-icons": "^1.6.1",
     "vitepress-plugin-legend": "^1.0.7",
     "vitepress-plugin-md-h1": "^1.0.11",
-    "vitepress-plugin-mermaid-pan-zoom": "^1.0.0",
+    "vitepress-plugin-mermaid-pan-zoom": "^1.0.2",
     "vitepress-plugin-pagefind": "^0.4.14",
     "vitepress-protect-plugin": "^1.0.6",
     "vue3-autocounter": "^1.0.8",
@@ -238,7 +238,8 @@
   "overrides": {
     "@zenuml/core": "^3.36.0",
     "release-it": "^19.0.4",
-    "vite": "npm:rolldown-vite@7.0.12",
+    "svg-pan-zoom": "^3.6.2",
+    "vite": "npm:rolldown-vite@7.1.0-beta.0",
     "vite-plugin-html": "^3.2.2",
     "vitepress": "^2.0.0-alpha.9",
     "vue": "^3.5.18"
