:sparkles: feat: 功能优化

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.24",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.366",
+    "@iconify/json": "^2.2.367",
     "@iconify/utils": "^3.0.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.1",
@@ -75,7 +75,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
     "@types/node": "^24.2.0",
-    "@vitejs/plugin-legacy": "^7.1.0",
+    "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
     "canvas-confetti": "^1.9.3",
     "commitizen": "^4.3.1",
@@ -99,7 +99,7 @@
     "node-modules-inspector": "^1.0.0",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
-    "rolldown-vite": "^7.1.0-beta.2",
+    "rolldown-vite": "^7.1.0",
     "sass-embedded": "^1.90.0",
     "sharp": "^0.34.3",
     "sitemap": "^8.0.0",
