--- a/package.json
+++ b/package.json
@@ -94,7 +94,6 @@
     "markdown-it": "^14.1.0",
     "markdown-it-mathjax3": "^4.3.2",
     "md5": "^2.3.0",
-    "mermaid": "^11.9.0",
     "mkcert": "^3.2.0",
     "node-modules-inspector": "^1.0.0",
     "picocolors": "^1.1.1",
@@ -237,9 +236,12 @@
   },
   "overrides": {
     "@zenuml/core": "^3.36.0",
+    "highlight.js": "^11.11.1",
+    "mermaid": "^11.9.0",
+    "prismjs": "^1.30.0",
     "release-it": "^19.0.4",
     "svg-pan-zoom": "^3.6.2",
-    "vite": "npm:rolldown-vite@7.1.0-beta.2",
+    "vite": "npm:rolldown-vite@7.1.0",
     "vite-plugin-html": "^3.2.2",
     "vitepress": "^2.0.0-alpha.9",
     "vue": "^3.5.18"
