--- a/package.json
+++ b/package.json
@@ -63,18 +63,18 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/cz-commitlint": "^19.8.1",
-    "@iconify-json/devicon": "^1.2.36",
-    "@iconify-json/skill-icons": "^1.2.0",
-    "@iconify-json/vscode-icons": "^1.2.24",
+    "@iconify-json/devicon": "^1.2.40",
+    "@iconify-json/skill-icons": "^1.2.2",
+    "@iconify-json/vscode-icons": "^1.2.28",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.367",
+    "@iconify/json": "^2.2.369",
     "@iconify/utils": "^3.0.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^24.2.0",
+    "@types/node": "^24.2.1",
     "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
     "canvas-confetti": "^1.9.3",
@@ -105,7 +105,7 @@
     "standard-version": "^9.5.0",
     "svgo": "^4.0.0",
     "typescript": "^5.9.2",
-    "unocss": "^66.4.1",
+    "unocss": "^66.4.2",
     "unplugin-auto-import": "^20.0.0",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.2.0",
@@ -123,14 +123,13 @@
     "vite-plugin-image-placeholder": "^1.1.0",
     "vite-plugin-image-preload": "^1.0.0",
     "vite-plugin-mkcert": "^1.17.8",
-    "vite-plugin-mock-dev-server": "^1.9.1",
+    "vite-plugin-mock-dev-server": "^1.9.2",
     "vite-plugin-progress": "^0.0.7",
     "vite-plugin-qrcode": "^0.3.0",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-robots": "^1.0.5",
     "vite-plugin-shortcuts": "^0.1.0",
     "vite-plugin-version-mark": "^0.2.2",
-    "vitepress-demo-plugin": "^1.4.7",
     "vitepress-i18n": "^1.3.4",
     "vitepress-markdown-it-stepper": "^0.1.1",
     "vitepress-plugin-changelog": "^0.1.1",
@@ -139,6 +138,7 @@
     "vitepress-plugin-markdown-define": "^1.0.2",
     "vitepress-plugin-mermaid": "^2.0.17",
     "vitepress-plugin-setfrontmatter": "^1.2.1",
+    "vitepress-vue-demo": "^1.0.10",
     "vitest": "^3.2.4"
   },
   "dependencies": {
@@ -149,6 +149,7 @@
     "@iconify/vue": "^5.0.0",
     "@mermaid-js/layout-elk": "^0.1.8",
     "@mermaid-js/mermaid-zenuml": "^0.2.1",
+    "@scqilin/phone-ui-vue": "^0.2.0",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
     "@vitest/coverage-v8": "^3.2.4",
@@ -195,6 +196,7 @@
     "markdown-it-sup": "^2.0.0",
     "markdown-it-wordless": "^1.1.1",
     "markdown-to-txt": "^2.0.1",
+    "marked": "^16.1.2",
     "markmap-common": "^0.18.9",
     "markmap-lib": "^0.18.12",
     "markmap-toolbar": "^0.18.12",
@@ -217,15 +219,13 @@
     "vite-plugin-inspect": "^11.3.2",
     "vitepress": "^2.0.0-alpha.9",
     "vitepress-markdown-timeline": "^1.2.2",
-    "vitepress-mermaid-renderer": "^1.0.14",
     "vitepress-plugin-auto-frontmatter": "^1.0.10",
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
     "vitepress-plugin-frontmatter": "^2.0.1",
-    "vitepress-plugin-group-icons": "^1.6.1",
-    "vitepress-plugin-legend": "^1.0.7",
+    "vitepress-plugin-group-icons": "^1.6.2",
+    "vitepress-plugin-legend": "^1.1.0",
     "vitepress-plugin-md-h1": "^1.0.11",
-    "vitepress-plugin-mermaid-pan-zoom": "^1.0.2",
     "vitepress-plugin-pagefind": "^0.4.14",
     "vitepress-protect-plugin": "^1.0.6",
     "vue3-autocounter": "^1.0.8",
