:sparkles: feat: 功能优化

--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "node-modules-inspector": "^1.0.0",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
+    "postcss-px-to-viewport": "^1.1.1",
     "rolldown-vite": "^7.1.2",
     "sass-embedded": "^1.90.0",
     "sharp": "^0.34.3",
@@ -125,6 +126,7 @@
     "vite-plugin-mkcert": "^1.17.8",
     "vite-plugin-mock-dev-server": "^1.9.2",
     "vite-plugin-progress": "^0.0.7",
+    "vite-plugin-px2rem": "^1.0.5",
     "vite-plugin-qrcode": "^0.3.0",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-robots": "^1.0.5",
@@ -205,7 +207,7 @@
     "nanoid": "^5.1.5",
     "nprogress-v2": "^1.1.10",
     "ofetch": "^1.4.1",
-    "oxc-minify": "^0.82.0",
+    "oxc-minify": "^0.82.1",
     "pagefind": "^1.3.0",
     "pinia": "^3.0.3",
     "pinyin-pro": "^3.27.0",
@@ -223,7 +225,7 @@
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
     "vitepress-plugin-frontmatter": "^2.0.1",
-    "vitepress-plugin-group-icons": "^1.6.2",
+    "vitepress-plugin-group-icons": "^1.6.3",
     "vitepress-plugin-legend": "^1.1.0",
     "vitepress-plugin-md-h1": "^1.0.11",
     "vitepress-plugin-pagefind": "^0.4.14",
