:sparkles: feat: 功能优化

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@iconify-json/skill-icons": "^1.2.3",
     "@iconify-json/vscode-icons": "^1.2.29",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.371",
+    "@iconify/json": "^2.2.373",
     "@iconify/utils": "^3.0.1",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.1",
@@ -95,7 +95,6 @@
     "markdown-it-mathjax3": "^4.3.2",
     "md5": "^2.3.0",
     "mkcert": "^3.2.0",
-    "node-modules-inspector": "^1.0.0",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
     "postcss-px-to-viewport": "^1.1.1",
@@ -124,7 +123,7 @@
     "vite-plugin-image-placeholder": "^1.1.0",
     "vite-plugin-image-preload": "^1.0.0",
     "vite-plugin-mkcert": "^1.17.8",
-    "vite-plugin-mock-dev-server": "^1.9.2",
+    "vite-plugin-mock-dev-server": "^1.9.3",
     "vite-plugin-progress": "^0.0.7",
     "vite-plugin-px2rem": "^1.0.5",
     "vite-plugin-qrcode": "^0.3.0",
@@ -136,7 +135,7 @@
     "vitepress-markdown-it-stepper": "^0.1.1",
     "vitepress-plugin-changelog": "^0.1.1",
     "vitepress-plugin-diagrams": "^1.0.0",
-    "vitepress-plugin-llms": "^1.7.2",
+    "vitepress-plugin-llms": "^1.7.3",
     "vitepress-plugin-markdown-define": "^1.0.2",
     "vitepress-plugin-mermaid": "^2.0.17",
     "vitepress-plugin-setfrontmatter": "^1.2.1",
@@ -148,9 +147,13 @@
     "@dhlx/delay": "^0.0.5",
     "@faker-js/faker": "^9.9.0",
     "@fingerprintjs/fingerprintjs": "^4.6.2",
+    "@iconify-json/carbon": "^1.2.13",
+    "@iconify-json/line-md": "^1.2.11",
+    "@iconify-json/mdi": "^1.2.3",
     "@iconify/vue": "^5.0.0",
     "@mermaid-js/layout-elk": "^0.1.8",
     "@mermaid-js/mermaid-zenuml": "^0.2.1",
+    "@opentiny/icons": "^0.1.4",
     "@scqilin/phone-ui-vue": "^0.2.0",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
@@ -219,7 +222,7 @@
     "ua-parser-js": "^2.0.4",
     "vite-plugin-find-image-duplicates": "^0.0.10",
     "vite-plugin-inspect": "^11.3.2",
-    "vitepress": "^2.0.0-alpha.10",
+    "vitepress": "^2.0.0-alpha.11",
     "vitepress-markdown-timeline": "^1.2.2",
     "vitepress-plugin-auto-frontmatter": "^1.0.10",
     "vitepress-plugin-back-to-top": "^1.0.1",
@@ -245,7 +248,7 @@
     "svg-pan-zoom": "^3.6.2",
     "vite": "npm:rolldown-vite@7.1.2",
     "vite-plugin-html": "^3.2.2",
-    "vitepress": "^2.0.0-alpha.10",
+    "vitepress": "^2.0.0-alpha.11",
     "vue": "^3.5.18"
   },
   "version": "0.7.7"
