--- a/package.json
+++ b/package.json
@@ -63,21 +63,22 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/cz-commitlint": "^19.8.1",
-    "@iconify-json/devicon": "^1.2.41",
+    "@iconify-json/devicon": "^1.2.42",
     "@iconify-json/skill-icons": "^1.2.3",
     "@iconify-json/vscode-icons": "^1.2.29",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.373",
+    "@iconify/json": "^2.2.376",
     "@iconify/utils": "^3.0.1",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.1",
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^24.2.1",
+    "@types/node": "^24.3.0",
     "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
     "canvas-confetti": "^1.9.3",
+    "code-inspector-plugin": "^1.2.2",
     "commitizen": "^4.3.1",
     "commitlint": "^19.8.1",
     "commitlint-config-cz": "^0.13.3",
@@ -85,7 +86,7 @@
     "commitlint-config-gitmoji": "^2.3.1",
     "conventional-changelog-cli": "^5.0.0",
     "conventional-changelog-gitmoji-config": "^1.5.2",
-    "cz-customizable": "^7.4.0",
+    "cz-customizable": "^7.5.0",
     "cz-message-helper": "^2.0.0",
     "feed": "^5.1.0",
     "glob": "^11.0.3",
@@ -98,7 +99,7 @@
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
     "postcss-px-to-viewport": "^1.1.1",
-    "rolldown-vite": "^7.1.2",
+    "rolldown-vite": "^7.1.3",
     "sass-embedded": "^1.90.0",
     "sharp": "^0.34.3",
     "sitemap": "^8.0.0",
@@ -154,12 +155,13 @@
     "@mermaid-js/layout-elk": "^0.1.8",
     "@mermaid-js/mermaid-zenuml": "^0.2.1",
     "@opentiny/icons": "^0.1.4",
+    "@pinia/plugin-debounce": "^1.0.1",
     "@scqilin/phone-ui-vue": "^0.2.0",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
-    "@vue-styled-components/core": "^1.13.1",
+    "@vue-styled-components/core": "^1.13.2",
     "@vue-styled-components/plugin": "^1.0.1",
     "@vue/test-utils": "^2.4.6",
     "animate.css": "^4.1.1",
@@ -201,7 +203,7 @@
     "markdown-it-sup": "^2.0.0",
     "markdown-it-wordless": "^1.1.1",
     "markdown-to-txt": "^2.0.1",
-    "marked": "^16.1.2",
+    "marked": "^16.2.0",
     "markmap-common": "^0.18.9",
     "markmap-lib": "^0.18.12",
     "markmap-toolbar": "^0.18.12",
@@ -210,9 +212,11 @@
     "nanoid": "^5.1.5",
     "nprogress-v2": "^1.1.10",
     "ofetch": "^1.4.1",
-    "oxc-minify": "^0.82.1",
+    "oxc-minify": "^0.82.2",
     "pagefind": "^1.3.0",
     "pinia": "^3.0.3",
+    "pinia-shared-state": "^1.0.1",
+    "pinia-undo": "^0.2.4",
     "pinyin-pro": "^3.27.0",
     "random": "^5.4.1",
     "randomcolor": "^0.6.2",
@@ -246,7 +250,7 @@
     "prismjs": "^1.30.0",
     "release-it": "^19.0.4",
     "svg-pan-zoom": "^3.6.2",
-    "vite": "npm:rolldown-vite@7.1.2",
+    "vite": "npm:rolldown-vite@7.1.3",
     "vite-plugin-html": "^3.2.2",
     "vitepress": "^2.0.0-alpha.11",
     "vue": "^3.5.18"
