--- a/package.json
+++ b/package.json
@@ -186,13 +186,11 @@
     "lodash-es": "^4.17.21",
     "lunisolar": "^2.6.0",
     "markdown-it-anchor": "^9.2.0",
-    "markdown-it-cjk-friendly": "^1.2.0",
     "markdown-it-collapsible": "^2.0.2",
     "markdown-it-footnote": "^4.0.0",
     "markdown-it-front-matter": "^0.2.4",
     "markdown-it-github-alerts": "^1.0.0",
     "markdown-it-hashmention": "^0.3.9",
-    "markdown-it-image-lazy-loading": "^2.0.1",
     "markdown-it-multimd-table-ext": "^4.2.32",
     "markdown-it-multiple-choice": "^1.1.5",
     "markdown-it-named-code-blocks": "^1.0.6",
@@ -204,19 +202,16 @@
     "markdown-it-wordless": "^1.1.1",
     "markdown-to-txt": "^2.0.1",
     "marked": "^16.2.0",
-    "markmap-common": "^0.18.9",
-    "markmap-lib": "^0.18.12",
-    "markmap-toolbar": "^0.18.12",
-    "markmap-view": "^0.18.12",
     "medium-zoom": "^1.1.0",
     "nanoid": "^5.1.5",
     "nprogress-v2": "^1.1.10",
     "ofetch": "^1.4.1",
-    "oxc-minify": "^0.82.2",
+    "oxc-minify": "^0.82.3",
     "pagefind": "^1.3.0",
     "pinia": "^3.0.3",
     "pinia-shared-state": "^1.0.1",
     "pinia-undo": "^0.2.4",
+    "pinyin-match": "^1.2.8",
     "pinyin-pro": "^3.27.0",
     "random": "^5.4.1",
     "randomcolor": "^0.6.2",
@@ -227,7 +222,7 @@
     "vite-plugin-find-image-duplicates": "^0.0.10",
     "vite-plugin-inspect": "^11.3.2",
     "vite-plugin-pwa": "^1.0.3",
-    "vitepress": "^2.0.0-alpha.11",
+    "vitepress": "^2.0.0-alpha.12",
     "vitepress-markdown-timeline": "^1.2.2",
     "vitepress-plugin-auto-frontmatter": "^1.0.10",
     "vitepress-plugin-back-to-top": "^1.0.1",
@@ -253,8 +248,8 @@
     "svg-pan-zoom": "^3.6.2",
     "vite": "npm:rolldown-vite@7.1.4",
     "vite-plugin-html": "^3.2.2",
-    "vitepress": "^2.0.0-alpha.11",
-    "vue": "^3.5.18"
+    "vitepress": "^2.0.0-alpha.12",
+    "vue": "^3.5.19"
   },
   "version": "0.7.8"
 }
