--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "mkcert:uninstall": "mkcert -uninstall",
     "export-pdf": "press-export-pdf export ./zh-CN/gallery",
     "ncu": "npx npm-check-updates",
-    "taze": "npx taze"
+    "taze": "npx taze",
+    "deploy": "node ./deploy/index.ts"
   },
   "imports": {
     "#*": "./*"
@@ -78,7 +79,7 @@
     "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-vue-jsx": "^5.1.0",
     "canvas-confetti": "^1.9.3",
-    "code-inspector-plugin": "^1.2.3",
+    "code-inspector-plugin": "^1.2.5",
     "commitizen": "^4.3.1",
     "commitlint": "^19.8.1",
     "commitlint-config-cz": "^0.13.3",
@@ -92,6 +93,7 @@
     "glob": "^11.0.3",
     "husky": "^9.1.7",
     "increase-memory-limit": "^1.0.7",
+    "jszip": "^3.10.1",
     "markdown-it": "^14.1.0",
     "markdown-it-mathjax3": "^4.3.2",
     "md5": "^2.3.0",
@@ -167,9 +169,10 @@
     "animate.css": "^4.1.1",
     "animejs": "4.1.3",
     "ant-design-vue": "4.2.6",
+    "chalk": "^5.6.0",
     "cross-env": "^10.0.0",
     "crypto": "^1.0.1",
-    "dayjs": "^1.11.13",
+    "dayjs": "^1.11.14",
     "deepmerge-ts": "^7.1.5",
     "default-passive-events": "^4.0.0",
     "driver.js": "^1.3.6",
@@ -206,6 +209,7 @@
     "nanoid": "^5.1.5",
     "nprogress-v2": "^1.1.10",
     "ofetch": "^1.4.1",
+    "ora": "^8.2.0",
     "oxc-minify": "^0.82.3",
     "pagefind": "^1.3.0",
     "pinia": "^3.0.3",
@@ -216,6 +220,7 @@
     "random": "^5.4.1",
     "randomcolor": "^0.6.2",
     "resize-observer-polyfill": "^1.5.1",
+    "scp2": "^0.5.0",
     "screenfull": "^6.0.2",
     "simple-git": "^3.28.0",
     "ua-parser-js": "^2.0.4",
