--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
     "postcss-px-to-viewport": "^1.1.1",
+    "purgecss": "^7.0.2",
     "rolldown-vite": "^7.1.5",
     "sass-embedded": "^1.91.0",
     "sharp": "^0.34.3",
