:pencil2: docs: 增加文章

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@plugin-web-update-notification/vite": "^2.0.2",
     "@release-it/conventional-changelog": "^10.0.1",
+    "@types/element-resize-detector": "^1.1.6",
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
@@ -190,8 +191,8 @@
     "gsap": "^3.13.0",
     "hashids": "^2.3.0",
     "html2particle": "^0.0.10",
-    "lodash-es": "^4.17.21",
     "lunisolar": "^2.6.0",
+    "lodash-es": "^4.17.21",
     "markdown-it-anchor": "^9.2.0",
     "markdown-it-collapsible": "^2.0.2",
     "markdown-it-footnote": "^4.0.0",
