:bug: fix: 修复打包失败

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,6 +72,7 @@
   "typescript.tsserver.nodePath": "node",
   "vitest.shellType": "terminal",
   "commentTranslate.targetLanguage": "zh-CN",
+  "commentTranslate.hover.enabled": false,
   //   // 拖拽行为
   //   "markdown.editor.drop.copyIntoWorkspace": "never",
   //   // 粘贴行为
