:pencil2: docs: 更新

--- a/package.json
+++ b/package.json
@@ -72,11 +72,11 @@
     "@commitlint/config-conventional": "^20.0.0",
     "@commitlint/cz-commitlint": "^20.1.0",
     "@iconify-json/devicon": "^1.2.45",
-    "@iconify-json/logos": "^1.2.9",
+    "@iconify-json/logos": "^1.2.10",
     "@iconify-json/skill-icons": "^1.2.3",
     "@iconify-json/vscode-icons": "^1.2.33",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.400",
+    "@iconify/json": "^2.2.401",
     "@iconify/utils": "^3.0.2",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@plugin-web-update-notification/vite": "^2.0.2",
@@ -104,7 +104,6 @@
     "mkcert": "^3.2.0",
     "node-scp2": "^1.0.0",
     "picocolors": "^1.1.1",
-    "rolldown-vite": "^7.1.19",
     "sass-embedded": "^1.93.2",
     "sharp": "^0.34.4",
     "sitemap": "^8.0.1",
@@ -155,8 +154,8 @@
     "@opentiny/icons": "^0.1.4",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
-    "@vitest/coverage-v8": "^4.0.3",
-    "@vitest/ui": "^4.0.3",
+    "@vitest/coverage-v8": "^4.0.4",
+    "@vitest/ui": "^4.0.4",
     "@vue-styled-components/core": "^1.13.3",
     "@vue-styled-components/plugin": "^1.0.1",
     "@vueuse/core": "^14.0.0",
@@ -232,12 +231,12 @@
     "@zenuml/core": "^3.41.6",
     "dayjs": "^1.11.18",
     "highlight.js": "^11.11.1",
-    "mermaid": "^11.12.0",
+    "mermaid": "^11.12.1",
     "oxc-minify": "^0.93.0",
     "prismjs": "^1.30.0",
     "release-it": "^19.0.5",
     "svg-pan-zoom": "^3.6.2",
-    "vite": "npm:rolldown-vite@7.1.19",
+    "vite": "npm:rolldown-vite@lastest",
     "vite-plugin-html": "^3.2.2",
     "vitepress": "^2.0.0-alpha.12",
     "vue": "^3.5.22"
