:sparkles: feat: 优化代码预览

--- a/package.json
+++ b/package.json
@@ -104,9 +104,10 @@
     "mkcert": "^3.2.0",
     "node-scp2": "^1.0.0",
     "picocolors": "^1.1.1",
+    "postcss": "^8.5.6",
     "sass-embedded": "^1.93.2",
     "sharp": "^0.34.4",
-    "sitemap": "^8.0.1",
+    "sitemap": "^8.0.2",
     "svgo": "^4.0.0",
     "typescript": "^5.9.3",
     "unocss": "^66.5.4",
@@ -139,7 +140,7 @@
     "vitepress-plugin-rss": "^0.3.2",
     "vitepress-plugin-setfrontmatter": "^1.2.3",
     "vitepress-plugin-tabs": "^0.7.3",
-    "vitest": "^4.0.4"
+    "vitest": "^4.0.5"
   },
   "dependencies": {
     "@catppuccin/vitepress": "^0.1.2",
@@ -154,8 +155,10 @@
     "@opentiny/icons": "^0.1.4",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
-    "@vitest/coverage-v8": "^4.0.4",
-    "@vitest/ui": "^4.0.4",
+    "@vitepress-demo-preview/component": "^2.6.1",
+    "@vitepress-demo-preview/plugin": "^1.4.1",
+    "@vitest/coverage-v8": "^4.0.5",
+    "@vitest/ui": "^4.0.5",
     "@vue-styled-components/core": "^1.13.3",
     "@vue-styled-components/plugin": "^1.0.1",
     "@vueuse/core": "^14.0.0",
@@ -203,7 +206,6 @@
     "pinyin-pro": "^3.27.0",
     "random": "^5.4.1",
     "randomcolor": "^0.6.2",
-    "resize-observer-polyfill": "^1.5.1",
     "scp2": "^0.5.0",
     "screenfull": "^6.0.2",
     "simple-git": "^3.28.0",
