:sparkles: feat: 功能优化

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
     "@types/node": "^24.10.0",
+    "@vite-pwa/vitepress": "^1.0.1",
     "@vitejs/plugin-vue-jsx": "^5.1.1",
     "canvas-confetti": "^1.9.4",
     "code-inspector-plugin": "^1.2.10",
@@ -94,7 +95,7 @@
     "commitlint-config-git-commit-emoji": "^1.0.0",
     "cz-customizable": "^7.5.1",
     "cz-message-helper": "^2.0.0",
-    "eslint": "^9.39.0",
+    "eslint": "^9.39.1",
     "feed": "^5.1.0",
     "glob": "^11.0.3",
     "husky": "^9.1.7",
