:bug: fix: 修复打包异常

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
     "@types/node": "^24.10.0",
+    "@vite-pwa/assets-generator": "^1.0.2",
     "@vite-pwa/vitepress": "^1.0.1",
     "@vitejs/plugin-vue-jsx": "^5.1.1",
     "canvas-confetti": "^1.9.4",
@@ -127,6 +128,7 @@
     "vite-plugin-image-preload": "^1.0.0",
     "vite-plugin-mkcert": "^1.17.9",
     "vite-plugin-mock-dev-server": "^2.0.2",
+    "vite-plugin-pwa": "^1.1.0",
     "vite-plugin-px2rem": "^1.0.5",
     "vite-plugin-qrcode": "^0.3.0",
     "vite-plugin-robots": "^1.0.5",
