:sparkles: feat: 功能优化

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "register:components": "vitepress-rc",
     "pkg:patch": "patch-package",
     "deploy:win": "powershell scripts/autoDeploy.bat",
-    "font:prepare": "node scripts/font_extractor.cjs",
-    "font:build": "node scripts/font_reset.cjs && npx font-spider fonts-spider/index.html --no-backup && node scripts/font_move.cjs",
+    "font:prepare": "tsx scripts/font_extractor.ts",
+    "font:build": "npx font-spider fonts-spider/index.html --no-backup && tsx scripts/font_move.ts",
     "font:test": "node --disable-warning=ExperimentalWarning --env-file .env scripts/env-test.ts",
     "lint": "eslint --fix --ext .ts,.js,.vue src test/unit",
     "lint:fix": "eslint . --fix",
@@ -71,7 +71,7 @@
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
     "@commitlint/cz-commitlint": "^20.3.1",
-    "@iconify/json": "^2.2.428",
+    "@iconify/json": "^2.2.429",
     "@iconify/utils": "^3.1.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.4",
@@ -82,6 +82,8 @@
     "@types/node": "^25.0.9",
     "@types/three": "^0.182.0",
     "@vitejs/plugin-vue-jsx": "^5.1.3",
+    "archiver": "^7.0.1",
+    "chalk": "^5.6.2",
     "commitizen": "^4.3.1",
     "commitlint": "^20.3.1",
     "commitlint-config-cz": "^0.13.3",
@@ -99,6 +101,7 @@
     "node-scp2": "^1.0.0",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
+    "rimraf": "^6.1.2",
     "sass-embedded": "^1.97.2",
     "sharp": "^0.34.5",
     "sitemap": "^9.0.0",
@@ -157,7 +160,6 @@
     "animate.css": "^4.1.1",
     "animejs": "4.2.2",
     "browserslist": "^4.28.1",
-    "chalk": "^5.6.2",
     "copy-to-clipboard": "^3.3.3",
     "cross-env": "^10.1.0",
     "deepmerge-ts": "^7.1.5",
@@ -169,6 +171,8 @@
     "hover-tilt": "^1.0.0",
     "html2particle": "^0.0.11-beta.5",
     "lodash-es": "^4.17.22",
+    "log-assistant": "^1.1.5",
+    "log-symbols": "^7.0.1",
     "lunisolar": "^2.6.0",
     "mark.js": "^8.11.1",
     "markdown-exit": "^1.0.0-beta.7",
@@ -193,7 +197,7 @@
     "pagefind": "^1.4.0",
     "pinia": "^3.0.4",
     "pinyin-match": "^1.2.10",
-    "pinyin-pro": "^3.27.0",
+    "pinyin-pro": "^3.28.0",
     "random": "^5.4.1",
     "scp2": "^0.5.0",
     "screenfull": "^6.0.2",
@@ -201,6 +205,7 @@
     "tdesign-vue-next": "^1.18.0",
     "three": "^0.182.0",
     "ua-parser-js": "^2.0.8",
+    "universal-waterfall-layout": "^1.0.4",
     "vite-plugin-inspect": "^11.3.3",
     "vitepress": "^2.0.0-alpha.15",
     "vitepress-markdown-timeline": "^1.2.2",
@@ -208,9 +213,9 @@
     "vitepress-plugin-auto-frontmatter": "^1.0.13",
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
     "vitepress-plugin-frontmatter": "^2.0.1",
-    "vitepress-plugin-group-icons": "^1.6.5",
+    "vitepress-plugin-group-icons": "^1.7.1",
     "vitepress-plugin-image-preview": "^0.1.1",
-    "vitepress-plugin-legend": "^1.2.1",
+    "vitepress-plugin-legend": "^1.3.0",
     "vitepress-plugin-md-h1": "^1.0.11",
     "vitepress-plugin-pagefind": "^0.4.18",
     "vitepress-plugin-tabs": "^0.7.3",
