:sparkles: feat: 功能优化

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
     "@commitlint/cz-commitlint": "^20.3.1",
-    "@iconify/json": "^2.2.430",
+    "@iconify/json": "^2.2.431",
     "@iconify/utils": "^3.1.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.4",
@@ -128,7 +128,7 @@
     "vite-plugin-version-mark": "^0.2.2",
     "vitepress-demo-plugin": "^1.5.1",
     "vitepress-i18n": "^1.3.5",
-    "vitepress-linkcard": "^2.0.1",
+    "vitepress-linkcard": "^2.1.1",
     "vitepress-markdown-it-stepper": "^0.1.1",
     "vitepress-plugin-llms": "^1.10.0",
     "vitepress-plugin-mermaid": "^2.0.17",
@@ -142,6 +142,7 @@
     "@dgreenheck/ez-tree": "^1.1.0",
     "@faker-js/faker": "^10.2.0",
     "@fingerprintjs/fingerprintjs": "^5.0.1",
+    "@fontsource-variable/noto-sans-sc": "^5.2.10",
     "@iconify/vue": "^5.0.0",
     "@mdit/plugin-figure": "^0.22.2",
     "@mdit/plugin-img-lazyload": "^0.22.1",
@@ -156,14 +157,14 @@
     "@vitepress-code-preview/plugin": "^1.0.6",
     "@vitepress-demo-preview/component": "^2.6.1",
     "@vitepress-demo-preview/plugin": "^1.4.1",
-    "@vitest/coverage-v8": "^4.0.17",
-    "@vitest/ui": "^4.0.17",
+    "@vitest/coverage-v8": "^4.0.18",
+    "@vitest/ui": "^4.0.18",
     "@vue-styled-components/core": "^1.13.3",
     "@vue-styled-components/plugin": "^1.0.1",
     "@vueuse/core": "^14.1.0",
     "@zumer/snapdom": "^2.0.2",
     "animate.css": "^4.1.1",
-    "animejs": "4.3.1",
+    "animejs": "4.3.3",
     "browserslist": "^4.28.1",
     "copy-to-clipboard": "^3.3.3",
     "cross-env": "^10.1.0",
@@ -248,10 +249,10 @@
     "prismjs": "^1.30.0",
     "release-it": "^19.2.4",
     "svg-pan-zoom": "^3.6.2",
-    "vite": "8.0.0-beta.8",
+    "vite": "8.0.0-beta.9",
     "vite-plugin-html": "^3.2.2",
     "vitepress": "^2.0.0-alpha.15",
-    "vitest": "^4.0.17",
+    "vitest": "^4.0.18",
     "vue": "^3.5.27"
   },
   "version": "0.11.19"
